--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100 d-flex flex-column">
 <head>
   <meta charset="utf-8">
-  <title>Sprintx</title>
+  <title>Sprint X</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
-<body>
-  <app-root></app-root>
+<body class="h-100 d-flex flex-column flex-fill">
+  <app-root class="d-flex flex-column flex-fill"></app-root>
 </body>
 </html>
