added fullscreen and screenlock

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>Sprint X</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body class="h-100 d-flex flex-column flex-fill">
-  <app-root class="d-flex flex-column flex-fill"></app-root>
+<app-root class="d-flex flex-column flex-fill"></app-root>
 </body>
 </html>
